tests/NormalTests/paczka1/fuzzy1/36554137.err
Error in line 11: JRVkCUJ A120 296,16
Error in line 7: S166 S166 98,3
Error in line 6: LAvyUXSI6o S166 88,3
